<resources>
    <string name="app_name">APTCovid19</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Alan Perdhana Timor</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ringkasan">Ringkasan</string>
    <string name="indonesia">Indonesia</string>
    <string name="info">Info</string>
    <string name="riwayat">Riwayat</string>
    <string name="not_update">Data Riwayat Belum Di Update</string>
    <string name="confirmed">Terkonfirmasi</string>
    <string name="recovered">Sembuh</string>
    <string name="deaths">Kematian</string>
    <string name="keterangan">Ket :</string>
    <string name="world_summary_data">Ringkasan Data Dunia</string>
    <string name="from_corona">Dari Covid-19</string>
    <string name="last_update">Last Update</string>
    <string name="indonesia_summary_data">Ringkasan Data Indonesia</string>
    <string name="notelp">No Telepon</string>
    <string name="tentang">About</string>
</resources>