<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.alan.cobanav.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.alan.cobanav.ui.gallery.NoTelpFragment"
        android:label="@string/indonesia"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.alan.cobanav.ui.slideshow.SlideshowFragment"
        android:label="@string/riwayat"
        tools:layout="@layout/fragment_riwayat" />
    <fragment
        android:id="@+id/nav_notelp"
        android:name="com.alan.cobanav.ui.slideshow.SlideshowFragment"
        android:label="@string/notelp"
        tools:layout="@layout/fragment_notelp" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.alan.cobanav.ui.slideshow.SlideshowFragment"
        android:label="@string/notelp"
        tools:layout="@layout/fragment_notelp" />
</navigation>